src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__clingen_overlaps@gene-abcd1.snap
---
source: src/strucvars/eval/del/section2.rs
expression: genes
---
- gene_symbol: BCAP31
  ncbi_gene_id: "10134"
  genomic_location: "X:152965947-152990201"
  haploinsufficiency_score: SufficientEvidence
  triplosensitivity_score: NoEvidenceAvailable
  haploinsufficiency_disease_id: "MONDO:0010334"
  triplosensitivity_disease_id: ~
- gene_symbol: ABCD1
  ncbi_gene_id: "215"
  genomic_location: "X:152990323-153010216"
  haploinsufficiency_score: SufficientEvidence
  triplosensitivity_score: NoEvidenceAvailable
  haploinsufficiency_disease_id: "MONDO:0018544"
  triplosensitivity_disease_id: ~

