src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__clingen_overlaps@region-match-2.snap
---
source: src/strucvars/eval/del/section2.rs
expression: regions
---
- isca_id: ISCA-46303
  isca_region_name: SOX9 upstream enhancer region
  genomic_location: "17:67892996-69792434"
  haploinsufficiency_score: SufficientEvidence
  triplosensitivity_score: LittleEvidence
  haploinsufficiency_disease_id: "MONDO:0007134"
  triplosensitivity_disease_id: "MONDO:0009869"

