src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__evaluate@APOB-2D-1.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- L2:
    L2B: {}
- L2:
    L2D1:
      gene:
        hgnc_id: "HGNC:603"
        hgnc_symbol: APOB
        ensembl_gene_id: ENSG00000084674
        ncbi_gene_id: "338"

