src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__evaluate@APOB-2D-4.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- l2:
    l2b: {}
- l2:
    l2d4:
      suggested_score: 0.9
      gene:
        hgnc_id: "HGNC:603"
        hgnc_symbol: APOB
        ensembl_gene_id: ENSG00000084674
        ncbi_gene_id: "338"
      exon_nos:
        - 29
        - 28

