src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__evaluate@APOB-2E.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- l2:
    l2_b: {}
- l2:
    l2_e:
      suggested_score: 0.9
      pvs1_result: pvs1

