src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__evaluate@COL3A1-2A-pos.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- l2:
    l2a:
      suggested_score: 1
      hi_genes:
        - geneSymbol: COL3A1
          ncbiGeneId: "1281"
          genomicLocation37: "chr2:189839099-189877472"
          genomicLocation38: "chr2:188974373-189012746"
          haploinsufficiencyScore: CLINGEN_DOSAGE_SCORE_SUFFICIENT_EVIDENCE_AVAILABLE
          triplosensitivityScore: CLINGEN_DOSAGE_SCORE_NO_EVIDENCE_AVAILABLE
          haploinsufficiencyDiseaseId: "MONDO:0007524"
      hi_regions: []

